--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ identify==2.5.36
 nodeenv==1.8.0
 platformdirs==4.2.0
 pre-commit==3.7.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.1
 PyYAML==6.0.1
 setuptools==69.5.1
 sqlparse==0.5.0
