--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ DEBUG=True
 
 # Postgres setting
 DB_ENGINE=django.db.backends.postgresql
-DB_NAME=tow_truk
+DB_NAME=ecom_tz
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=admin
 DB_HOST=localhost
 DB_PORT=5432
