--- a/ecom/infra/.env.example
+++ b/ecom/infra/.env.example
@@ -1,6 +1,6 @@
 # Django setting
 SECRET_KEY="django-insecure-jc%k1jy@h)8car%89w39qh6_4t0_hwd+l4sl0a8+unxdnp091!"
-ALLOWED_HOSTS='127.0.0.1 localhost 89.110.70.107'
+ALLOWED_HOSTS='127.0.0.1 localhost 89.110.70.107 dartanyun.cyou'
 DEBUG=False
 
 # Postgres setting
