--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./backend/requirements.lint.txt
+          pip install -r ./ecom/requirements.lint.txt
       - name: Test with flake8
         run: |
-          cd backend/
+          cd ecom/
           python -m flake8 .
 
   build_and_push_to_docker_hub:
