--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./ecom/requirements.lint.txt
+          pip install -r ./ecom/requirements.txt
       - name: Test with flake8
         run: |
           cd ecom/
