--- a/ecom/requirements.txt
+++ b/ecom/requirements.txt
@@ -13,16 +13,20 @@ djangorestframework-simplejwt==5.3.1
 djoser==2.2.2
 drf-yasg==1.21.7
 filelock==3.13.4
+flake8==7.0.0
 identify==2.5.36
 idna==3.7
 inflection==0.5.1
+mccabe==0.7.0
 nodeenv==1.8.0
 oauthlib==3.2.2
 packaging==24.0
 platformdirs==4.2.0
 pre-commit==3.7.0
 psycopg2-binary==2.9.9
+pycodestyle==2.11.1
 pycparser==2.22
+pyflakes==3.2.0
 PyJWT==2.8.0
 python-dotenv==1.0.1
 python3-openid==3.2.0
