--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,6 @@ jobs:
       - name: Push to Docker Hub gateway
         uses: docker/build-push-action@v3
         with:
-          context: ./src/infra/
+          context: ./infra/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/tte_gateway:latest
