--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          source: "docker-compose.production.yml"
+          source: "ecom/infra/docker-compose.production.yml"
           target: "ambassadors"
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
